--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase / secrets
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+dart_defines/*.env
